# emotiv-lsl

./: .gitattributes  .gitignore  2025-09-03_env.yml  2025-09-03_pip_list_env.txt  2025-09-03_rMBP_WORKING_pip_freeze.txt  AGENT.md  Dockerfile  README.md  config.py  docker-compose.yml  emotiv-lsl.code-workspace  environment.yml  launch_emotiv_lsl.ps1  launch_emotiv_viewer.py  main.py  main.spec  main_BLE.py  main_usb_capture.py  pyproject.toml  requirements.txt  requirements_for_mamba.txt  setup_emotiv_docker.sh
.cursor/plans/: add_uv_run_logger_app_command_f2cbd43b.plan.md  convert_to_lab-recorder-python_6ab5ae46.plan.md  (+1 more)
emotiv_lsl/: ble_config.py  ble_connection.py  ble_device.py  ble_uuids.json  ble_uuids.json.example  connection_base.py  connection_status.py  emotiv_base.py  emotiv_epoc_plus.py  emotiv_epoc_x.py  emotiv_epoc_x_pyshark.py  helpers.py  recorder_service.py  usb_connection.py
examples/: 40_epochs.ipynb  common.py  pho_analyze.ipynb  pho_read_and_export_mne.py  read_and_export_mne.py  read_data.py
logs_and_notes/: 2025-07-03_SetupOnLabKubuntu.md  2025-07-04_macOSInstall.md  2025-08-15_LabRecorderKubuntu.md  2025-09-03_macOSInstall_FULLY_WORKING.md  2025-09-03_rMBP_WORKING.yml  2025-09-30_rMBP_BLE_EpocPlus.md  2025-09-30_rMBP_BLE_EpocX.md  DEPLOYMENT.md
openspec/: project.md
scripts/: LSL_STREAM_COMPATIBILITY_VERIFICATION.md  README_discover_ble_uuids.md  build_exe.py  build_linux_exe.py  build_macOS_app.py  discover_ble_uuids.py  helpers.ps1  install_liblsl_linux.sh  launch_Official_emotiv_tool.ps1  launch_emotiv_lsl.ps1  launch_emotiv_lsl_no_gui.ps1  launch_lsl_viewer.ps1  lsl_reciever.py  setup_hidapi.py  start_emotiv_services.ps1  start_main.ps1  stop_official_emotiv_services.ps1  verify_lsl_stream_compatibility.py
templating/: pyproject_template_dev.toml_fragment  pyproject_template_release.toml_fragment
udev_rules/: 50-usb-emotivepoc.rules
(+36 files in other folders)
