[project]
name = "emotiv-lsl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8.10"
dependencies = [
    "bsl>=0.6.4",
    "cython>=3.1.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.7.5",
    "mne-qt-browser>=0.6.1",
    "mne[hdf5]>=1.6.1",
    "plotly>=6.2.0",
    "seaborn>=0.13.2",
    "setuptools>=75.3.2",
    "wheel>=0.45.1",
    "pyqt5>=5.15.7,<6",
    "pyqt5-qt5==5.15.2",
    "pyshark>=0.6",
    "pylsl>=1.16.2",
    "pycryptodome>=3.23.0",
    "scipy>=1.10.1",
]
