[project]
name = "emotiv-lsl"
version = "0.2.0"
description = "LSL server for Emotiv EPOC X, much more modern than others (~2025) "
readme = "README.md"
requires-python = ">=3.8.10"
dependencies = [
    "cython>=3.1.2",
    "ipykernel>=6.29.5",
    "mne[hdf5]>=1.6.1",
    "pycryptodome>=3.23.0",
    "pylsl>=1.16.2",
    "setuptools>=75.3.2,<81",
    "wheel>=0.45.1",
    "pyqt5>=5.15.7,<6",
    "pyqt5-qt5==5.15.2",
    "scipy>=1.10.1",
    "attrs>=25.3.0",
    "pyinstaller>=6.14.2",
    "nptyping>=2.5.0",
    "phopylslhelper",
    "hid==1.0.4",
]


[tool.uv.sources]
phopylslhelper = { git = "https://github.com/CommanderPho/phopylslhelper.git" }



